--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,6 @@
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
 .main {
   display: flex;
   flex-direction: column;
@@ -15,7 +18,7 @@
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
-  font-family: var(--font-mono);
+  font-family: Arial, Helvetica, sans;
 }
 
 .description a {
